--- a/translations/council+intl-icu.es.xlf
+++ b/translations/council+intl-icu.es.xlf
@@ -484,6 +484,7 @@
       <notes>
         <note category="german">looooooooool</note>
         <note category="from">db://CouncilEntryTemplate</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>looooooooool</source>
