--- a/translations/soul+intl-icu.en.xlf
+++ b/translations/soul+intl-icu.en.xlf
@@ -2572,7 +2572,7 @@
       </notes>
       <segment>
         <source>Wenn du der Meinung bist, fälschlicherweise gesperrt worden zu sein, kannst du dich im Weltforum melden.</source>
-        <target>Wenn du der Meinung bist, fälschlicherweise gesperrt worden zu sein, kannst du dich im Weltforum melden.</target>
+        <target>If you think you have been wrongly banned, you can report it in the Crows's Nest (at the bottom of the forum overview).</target>
       </segment>
     </unit>
     <unit id="4KXz4lN" name="ALLE SAISONS">
