--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -2560,7 +2560,7 @@
       </notes>
       <segment>
         <source>Wenn du der Meinung bist, fälschlicherweise gesperrt worden zu sein, kannst du dich im Weltforum melden.</source>
-        <target>Si crees que has sido sancionado por error, puedes reportarlo en el Foro Mundial.</target>
+        <target>Si crees que has sido sancionado por error, puedes reportarlo en el Nido de Cuervos (en la parte inferior del resumen del foro).</target>
       </segment>
     </unit>
     <unit id="4KXz4lN" name="ALLE SAISONS">
