--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -9407,5 +9407,16 @@
         <target>Para hacer esto debes estar a más de 3 kilómetros del pueblo.</target>
       </segment>
     </unit>
+    <unit id="EPH5jLS" name="Hierfür hast du keinen Platz.">
+      <notes>
+        <note category="german">Hierfür hast du keinen Platz.</note>
+        <note category="from">db://Requirement</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Hierfür hast du keinen Platz.</source>
+        <target>Hierfür hast du keinen Platz.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
