--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -25032,7 +25032,7 @@ cette violente opération...]]></target>
     </unit>
     <unit id="xpS6KNV">
       <notes>
-        <note category="german">Letzte Nacht war die Stadt von Zombies umzingelt! Einige schafften es, die Mauern zu durchbrechen, ein Zustrom, der uns {deaths} gute Leute kostete.</note>
+        <note category="german">Letzte Nacht war die Stadt {attack} von Zombies umzingelt! Einige schafften es, die Mauern zu durchbrechen, ein Zustrom, der uns {deaths} gute Leute kostete.</note>
         <note category="from">db://GazetteEntryTemplate</note>
       </notes>
       <segment>
