--- a/translations/help+intl-icu.es.xlf
+++ b/translations/help+intl-icu.es.xlf
@@ -8613,5 +8613,19 @@ Alle Seelenpunkte, die mit einer gelöschten Stadt erspielt wurden, gehen ebenso
         <target>Clasificación y temporadas</target>
       </segment>
     </unit>
+    <unit id="r.WCNCm">
+      <notes>
+        <note category="german">&lt;strong&gt;DEN SUPPORT KONTAKTIEREN:&lt;/strong&gt;
+Um Kontakt mit den Administratoren aufzunehmen, schreibe an die &lt;a x-group-connect="{oglink}" href="#"&gt;Offizielle Gruppe&lt;/a&gt; des Technischen Supports.</note>
+        <note category="from">twig:///templates/ajax/help/getting_help.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>&lt;strong&gt;DEN SUPPORT KONTAKTIEREN:&lt;/strong&gt;
+Um Kontakt mit den Administratoren aufzunehmen, schreibe an die &lt;a x-group-connect="{oglink}" href="#"&gt;Offizielle Gruppe&lt;/a&gt; des Technischen Supports.</source>
+        <target><![CDATA[<strong>DEN SUPPORT KONTAKTIEREN:</strong>
+Um Kontakt mit den Administratoren aufzunehmen, schreibe an die <a x-group-connect="{oglink}" href="#">Offizielle Gruppe</a> des Technischen Supports.]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
