--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -9211,11 +9211,10 @@
       <notes>
         <note category="german">Gierig schluckt dieser Bürger seine Wasserration runter, ohne auch nur einen Tropfen zu verschwenden... Seine Zunge klebt ihm noch immer am Gaumen und sein Hals ist noch genauso trocken wie vorher.{hr}&lt;strong&gt;Da er davor schon dehydriert warst, hat er keine neuen APs erhalten.&lt;/strong&gt;</note>
         <note category="from">db://ItemAction</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Gierig schluckt dieser Bürger seine Wasserration runter, ohne auch nur einen Tropfen zu verschwenden... Seine Zunge klebt ihm noch immer am Gaumen und sein Hals ist noch genauso trocken wie vorher.{hr}&lt;strong&gt;Da er davor schon dehydriert warst, hat er keine neuen APs erhalten.&lt;/strong&gt;</source>
-        <target><![CDATA[Gierig schluckt dieser Bürger seine Wasserration runter, ohne auch nur einen Tropfen zu verschwenden... Seine Zunge klebt ihm noch immer am Gaumen und sein Hals ist noch genauso trocken wie vorher.{hr}<strong>Da er davor schon dehydriert warst, hat er keine neuen APs erhalten.</strong>]]></target>
+        <target><![CDATA[Ce citoyen avale sa ration d'eau goulûment, sans en laisser filer la moindre goutte... Sa gorge le brûle toujours autant, mais au moins, il n'est plus en train de se déshydrater...{hr}<strong>Il n'a pas régénéré ses PA car il était déshydraté(e).</strong>]]></target>
       </segment>
     </unit>
     <unit id="1mv8jxQ">
